--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "mongodb": "^4.3.1"
+    "mongodb": "^4.3.1",
+    "multer": "^1.4.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
