--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "eslint": "^8.9.0",
     "mocha": "^9.2.1",
     "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.15",
